Ashuvpc2.json
{
"AWSTemplateFormatVersion": "2010-09-09",
    "Description": " To create a vpc",
    "Metadata": {

    },
    "Parameters": {
    
    },
    "Mappings": {

    },
    "Conditions": {

    },
    "Resources": {
    "Ashuvpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "Tags": [{ "Key": "Name", "Value":  "Ashuvpc" }]
      }
    },
    
    "AshuvpcIGW": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{ "Key": "Name", "Value":  "AshuvpcIGW" }]
        
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId":  { "Ref": "Ashuvpc" },
        "InternetGatewayId": { "Ref": "AshuvpcIGW" }
      }
    },
    
    "AshuvpcRT": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId":  { "Ref": "Ashuvpc" },
        "Tags": [{ "Key": "Name", "Value":  "AshuvpcRT" }]
      }
    },
    
    "PubRt": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "AshuvpcRT" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "AshuvpcIGW" }
      }
    },
    
    "SubPub1ass": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "AshuvpcSubPub1" },
        "RouteTableId": { "Ref": "AshuvpcRT" }
    }
  },
  
  "SubPub1ass1": {
    "Type": "AWS::EC2::SubnetRouteTableAssociation",
    "Properties": {
      "SubnetId":{ "Ref": "AshuvpcSubPub2" },
      "RouteTableId": { "Ref": "AshuvpcRT" }
    }
  },
  
    

    "AshuvpcSubPub1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": "true",
        "AvailabilityZone": "us-east-1a",
        "VpcId": { "Ref": "Ashuvpc" },
        "CidrBlock": "10.0.1.0/24",
        "Tags": [{ "Key": "Name", "Value":  "AshuvpcSubPub1" }]
      }
    },
    
    "AshuvpcSubPriv": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "us-east-1b",
        "VpcId": { "Ref": "Ashuvpc" },
         "CidrBlock": "10.0.2.0/24",
        "Tags": [{ "Key": "Name", "Value":  "AshuvpcSubPriv " }]
      }
    },
    
    "AshuvpcSubPub2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": "true",
        "AvailabilityZone": "us-east-1a",
        "VpcId": { "Ref": "Ashuvpc" },
          "CidrBlock": "10.0.3.0/24",
        "Tags": [{ "Key": "Name", "Value":  "AshuvpcSubPub2" }]
       
        
      }
    },
    
    "AshuvpcSubPriv2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "us-east-1b",
        "VpcId": { "Ref": "Ashuvpc" },
        "CidrBlock": "10.0.4.0/24",
        "Tags": [{ "Key": "Name", "Value":  "AshuvpcSubPriv2" }]
        
      }
    },
    
    "Ashuwebserver": {
        "Type": "AWS::EC2::Instance",
        "Properties": {
          "SubnetId":{"Ref":"AshuvpcSubPub2"},
           "KeyName": "Joinitkey",
            "DisableApiTermination": "false",
            "ImageId":  "ami-0b5eea76982371e91",
            "InstanceType": "t2.micro",
            "Monitoring": "false",
            "SecurityGroupIds" : [{ "Ref": "Ashuwebserversg" }],
            "Tags": [{"Key": "Name", "Value": "Ashuwebserver"}]
            
              }
            },
            
            "Ashuwebserversg" : {
              "Type" : "AWS::EC2::SecurityGroup",
              "Properties" : {
                "GroupDescription" : "This is used for my webserver",
                "SecurityGroupIngress" : [{ "IpProtocol": "tcp",
                "FromPort": 80,
                "ToPort": 80,
                "CidrIp": "0.0.0.0/0"
            },
            {
                "IpProtocol": "tcp",
                "FromPort": 443,
                "ToPort": 443,
                "CidrIp": "0.0.0.0/0"
            },
            {
                "IpProtocol": "tcp",
                "FromPort": 22,
                "ToPort": 22,
                "CidrIp": "0.0.0.0/0"
            },
            {
              "IpProtocol": "tcp",
                "FromPort": 3389,
                "ToPort": 3389,
                "CidrIp": "0.0.0.0/0"
              }],
  
                "VpcId" : { "Ref": "Ashuvpc" },
                "Tags": [{"Key": "Name", "Value": "Ashuwebserversg"}]
              }
            }
            
    
            

    
    
    },

    "Outputs": {

    }
}
